--- a/sleap/config/shortcuts.yaml
+++ b/sleap/config/shortcuts.yaml
@@ -3,13 +3,13 @@
 "save": QKeySequence.Save
 "save as": QKeySequence.SaveAs
 "close": QKeySequence.Close
-"add videos": Qt.CTRL + Qt.Key_A
+"add videos": 
 "next video": QKeySequence.Forward
 "prev video": QKeySequence.Back
 "goto frame": Qt.CTRL + Qt.Key_J
 "mark frame": Qt.CTRL + Qt.Key_M
 "goto marked": Qt.CTRL + Qt.SHIFT + Qt.Key_M
-"add instance": Qt.CTRL + Qt.Key_I
+"add instance": Qt.CTRL + Qt.Key_A
 "delete instance": Qt.CTRL + Qt.Key_Backspace
 "delete track": Qt.CTRL + Qt.SHIFT + Qt.Key_Backspace
 "transpose": Qt.CTRL + Qt.Key_T
