--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,12 +7,14 @@ on: [push, pull_request]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    name: Tests (${{ matrix.python-version }}, ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.6]
-
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        python-version: ["3.6"]
+     
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
